[gd_scene load_steps=11 format=3 uid="uid://cgsdisnwd5sk3"]

[ext_resource type="Script" path="res://scripts/battlefield.gd" id="1_yqoyk"]
[ext_resource type="PackedScene" uid="uid://b5iw5jg31baab" path="res://scenes/enemies/base_enemy.tscn" id="2_jx5xc"]
[ext_resource type="Texture2D" uid="uid://ygsbnbykkuwe" path="res://assets/Environment/2.png" id="3_unkll"]
[ext_resource type="PackedScene" uid="uid://5wkrskl1xh3u" path="res://scenes/enviroment/player.tscn" id="4_ge5ri"]
[ext_resource type="PackedScene" uid="uid://cp13lbvmsx8ob" path="res://scenes/enviroment/hud.tscn" id="5_jn76p"]
[ext_resource type="Script" path="res://scripts/player_hand.gd" id="6_dyhce"]
[ext_resource type="Texture2D" uid="uid://cnv04q6uj5cda" path="res://assets/Card Sprites/Card Back/_cover.png" id="7_mbqnr"]
[ext_resource type="FontFile" uid="uid://cbvsmohw8mlwd" path="res://assets/font/njo_14.ttf" id="10_5042g"]

[sub_resource type="LabelSettings" id="LabelSettings_el2ic"]
line_spacing = 0.0
font = ExtResource("10_5042g")
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a6tri"]
line_spacing = 0.0
font = ExtResource("10_5042g")
font_size = 24
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="Battlefield" type="Control" node_paths=PackedStringArray("player", "deck_size", "discard_pile_size") groups=["battlefield"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_yqoyk")
player = NodePath("Background/Player")
deck_size = NodePath("Background/Player/Deck/Label")
discard_pile_size = NodePath("Background/Player/Descarte/Label")

[node name="CanvasLayer" parent="." instance=ExtResource("5_jn76p")]

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_unkll")

[node name="Enemies" type="Node2D" parent="Background"]
position = Vector2(0, -8)

[node name="Enemy1" type="Marker2D" parent="Background/Enemies"]
position = Vector2(576, 276)

[node name="BaseEnemy" parent="Background/Enemies/Enemy1" instance=ExtResource("2_jx5xc")]

[node name="Enemy2" type="Marker2D" parent="Background/Enemies"]
position = Vector2(926, 351)

[node name="BaseEnemy" parent="Background/Enemies/Enemy2" instance=ExtResource("2_jx5xc")]

[node name="Enemy3" type="Marker2D" parent="Background/Enemies"]
position = Vector2(226, 351)

[node name="BaseEnemy" parent="Background/Enemies/Enemy3" instance=ExtResource("2_jx5xc")]

[node name="Player" parent="Background" node_paths=PackedStringArray("hud") instance=ExtResource("4_ge5ri")]
hud = NodePath("../../CanvasLayer")

[node name="PlayerHand" type="HBoxContainer" parent="Background/Player" groups=["player_hand"]]
custom_minimum_size = Vector2(450, 40)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 189.0
offset_top = 444.0
offset_right = 969.0
offset_bottom = 674.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
alignment = 1
script = ExtResource("6_dyhce")
hand_size = 4

[node name="Deck" type="TextureRect" parent="Background/Player"]
custom_minimum_size = Vector2(75, 100)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 500.0
offset_right = 74.0
offset_bottom = 600.0
grow_vertical = 0
texture = ExtResource("7_mbqnr")
expand_mode = 1

[node name="Label" type="Label" parent="Background/Player/Deck"]
layout_mode = 1
offset_left = 8.0
offset_top = -13.0
offset_right = 24.0
offset_bottom = 10.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "10"
label_settings = SubResource("LabelSettings_el2ic")

[node name="Descarte" type="TextureRect" parent="Background/Player"]
custom_minimum_size = Vector2(75, 100)
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1078.0
offset_top = 500.0
offset_right = 1128.0
offset_bottom = 600.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("7_mbqnr")
expand_mode = 1

[node name="Label" type="Label" parent="Background/Player/Descarte"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -28.0
offset_top = -12.0
offset_right = -8.0
offset_bottom = 13.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "10"
label_settings = SubResource("LabelSettings_a6tri")

[node name="EndTurn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -166.0
offset_top = -33.0
offset_right = -24.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("10_5042g")
text = "Finalizar Turno"

[connection signal="pressed" from="EndTurn" to="." method="_on_end_turn_pressed"]
